@@ -1,5 +1,8 @@
 Changes in 20.2
  - Added NLS/gettext
+ - fuser no longer assume st_dev is 0 for sockets, needed for kernel 2.4.12
+   and above, Thanks to Alexander Viro for the patch.
+ - Search both IPv4 and IPv6 namespaces.
 
 Changes in 20.1 (31-MAR-2001)
 =============================
